# earth

./: AGENTS.md  CMakeLists.txt  build.bat
cmake/: EarthCompilerConfig.cmake  EarthDependencyTargets.cmake  EarthProjectOptions.cmake
docs/: osgearth编译提示.txt  功能迭代.md  相关配置提示.txt
resource/: ui_resources.qrc
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: EnvironmentBootstrapper.cpp  EnvironmentBootstrapper.h  SimulationBootstrapper.cpp  SimulationBootstrapper.h
src/osgQt_new/: CMakeLists.txt  build.bat
src/osgQt_new/cmake/: EarthCompilerConfig.cmake  EarthDependencyTargets.cmake  EarthProjectOptions.cmake
src/osgQt_new/examples/: CMakeLists.txt
src/osgQt_new/examples/osgqfont/: CMakeLists.txt
src/osgQt_new/examples/osgviewerQt/: CMakeLists.txt  osgviewerQt.cpp
src/osgQt_new/include/osgQt/: Export  QFontImplementation
src/osgQt_new/src/: CMakeLists.txt  GraphicsWindowQt.cpp  QFontImplementation.cpp  ReaderQFont.cpp
src/osgQt_new/test/: CMakeLists.txt
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SceneWidget.cpp  SceneWidget.h
src/ui/draw/: DrawingTypes.h  MapDrawingController.cpp  MapDrawingController.h  MapDrawingEventHandler.cpp  MapDrawingEventHandler.h
test/: CMakeLists.txt
